--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,4 +1,8 @@
 test.mainUrl=https://qa-task.backbasecloud.com/
-test.username=candidatex
-test.password=qa-is-cool
+test.authorisation.username=candidatex
+test.authorisation.password=qa-is-cool
+
+test.api.users=/api/users
+test.api.articles=/api/articles
+test.api.profiles=/api/profiles
 test.url=https://candidatex:qa-is-cool@qa-task.backbasecloud.com/
