Add api tests Add ui tests

--- a/src/test/resources/driver.properties
+++ b/src/test/resources/driver.properties
@@ -4,9 +4,26 @@ driver.local.gecko=\\drivers\\geckodriver.exe
 driver.local.edge=\\drivers\\msedgedriver.exe
 
 ##BROWSER (chrome, firefox, edge)
-driver.browser=chrome
+driver.browser=Chrome
 driver.browser.width=1024
 driver.browser.height=1024
 
+##HEADLESS MODE
+driver.headless=false
 
+#DRIVER TIMEOUTS
+driver.waits.timeout=10
+driver.waits.initialization=60
 
+##SELENIUM GRID SETTINGS
+driver.selenium.grid.url=
+
+##BROWSERSTACK SETTINGS
+driver.bs.os=Windows
+driver.bs.os.version=10
+driver.bs.username=
+driver.bs.accesskey=
+driver.bs.url=@hub-cloud.browserstack.com/wd/hub
+
+##RUN PLATFORM (local, grid, bs)
+driver.platform=local
