--- a/pom.xml
+++ b/pom.xml
@@ -6,25 +6,22 @@
 
     <groupId>com.backbase</groupId>
     <artifactId>backbaseAssignment</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
         <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-
-        <aspectj.version>1.9.1</aspectj.version>
-        <allure.version>2.13.6</allure.version>
         <junit5.version>5.7.2</junit5.version>
-
         <assertj.version>3.20.2</assertj.version>
+        <selenium.version>3.141.59</selenium.version>
+        <rest.assured.version>4.4.0</rest.assured.version>
+        <extenreports.version>5.0.8</extenreports.version>
+        <lombok.version>1.18.20</lombok.version>
         <jackson.version>2.12.4</jackson.version>
-        <aspectj.version>1.8.10</aspectj.version>
-
-
+        <suite>ALL</suite>
     </properties>
 
     <dependencies>
@@ -48,15 +45,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-surefire-provider</artifactId>
-            <version>1.3.2</version>
-        </dependency>
-
-        <dependency>
             <groupId>com.aventstack</groupId>
             <artifactId>extentreports</artifactId>
-            <version>5.0.8</version>
+            <version>${extenreports.version}</version>
         </dependency>
 
         <dependency>
@@ -68,37 +59,37 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>3.141.59</version>
+            <version>${selenium.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-firefox-driver</artifactId>
-            <version>3.141.59</version>
+            <version>${selenium.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-chrome-driver</artifactId>
-            <version>3.141.59</version>
+            <version>${selenium.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-edge-driver</artifactId>
-            <version>3.141.59</version>
+            <version>${selenium.version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>4.4.0</version>
+            <version>${rest.assured.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.20</version>
+            <version>${lombok.version}</version>
         </dependency>
 
         <dependency>
@@ -120,5 +111,18 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <groups>${suite}</groups>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
