--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -2,7 +2,8 @@ test.mainUrl=https://qa-task.backbasecloud.com/
 test.authorisation.username=candidatex
 test.authorisation.password=qa-is-cool
 
+## API parameters
 test.api.users=/api/users
+test.api.user=/api/user
 test.api.articles=/api/articles
 test.api.profiles=/api/profiles
-test.url=https://candidatex:qa-is-cool@qa-task.backbasecloud.com/
